# torch-kaleidoscope

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/kaleidoscope/representations/: __init__.py  _utilities.py  conversions.py
src/representations/: colour_spaces.py  rgb_to_x.py
tests/representations/: test_conversions.py
