[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-kaleidoscope"
version = "0.0.1"
dependencies = [
    "torch>=2",
    "torchvision>=0.15",
]
description = "A tool kit for the use of non-RGB colour representations with torchvision and the PyTorch framework."
readme = "README.md"
authors = [
    {name = "Alexis J S Payne", email = "academia@aksan.dev"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]